# AppFramework

./: .clang-format  .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md
code/: CMakeLists.txt
code/Application/: CMakeLists.txt
code/Application/src/: Main.cpp
code/Core/: CMakeLists.txt
code/Core/inc/AppFramework/Core/: Application.h  CommandLine.h  Common.h  Component.h  DataFragment.h  Exception.h  Property.h  PropertyException.h  PropertyValue.h  Socket.h  SocketException.h  ValueType.h
code/Core/sample/: CMakeLists.txt  CommandLine.cpp  Component.cpp  PluginRunner.cpp  Property.cpp  SinWaveData.h  SinWaveGenerator.cpp  SineWaveRunner.cpp  Socket.cpp  plugin1.cpp  plugin2.cpp
code/Core/src/: Application.cpp  Component.cpp  Property.cpp  Socket.cpp
code/Core/test/: CMakeLists.txt  PropertyTest.cpp  SocketTest.cpp
code/cmake/: AddPlugin.cmake  SetUpGoogleTest.cmake  SetUpJsonCpp.cmake  SetUpPlatform.cmake
code/interface/: InterfaceProperty.h
